documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.VB

    Public Declare Function C41_SeqRd Lib "C41W32.DLL" Alias "_C41_SeqRd@12" (ByRef msgval As UInt32, ByRef stampval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_Start Lib "C41W32.DLL" Alias "_C41_Start@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_Stop Lib "C41W32.DLL" Alias "_C41_Stop@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_TimerClear Lib "C41W32.DLL" Alias "_C41_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function C41_TimerRd Lib "C41W32.DLL" Alias "_C41_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function C41_TimerResolution Lib "C41W32.DLL" Alias "_C41_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_717Boot Lib "C41W32.DLL" Alias "_C41_717Boot@4" (ByVal handleval As Int32) As Int32
    Public Declare Function C41_717FrameWipe Lib "C41W32.DLL" Alias "_C41_717FrameWipe@8" (ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmClear Lib "C41W32.DLL" Alias "_C41_717SubFrmClear@8" (ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmDataWipe Lib "C41W32.DLL" Alias "_C41_717SubFrmDataWipe@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmPtrDefault Lib "C41W32.DLL" Alias "_C41_717SubFrmPtrDefault@8" (ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmPtrSet Lib "C41W32.DLL" Alias "_C41_717SubFrmPtrSet@16" (ByVal subfrmnum As Int32, ByVal destsubfrm As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmRecordWipe Lib "C41W32.DLL" Alias "_C41_717SubFrmRecordWipe@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmWordConfig Lib "C41W32.DLL" Alias "_C41_717SubFrmWordConfig@20" (ByVal configval As Int32, ByVal subframe As Int32, ByVal wordnum As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmWordConfigEx Lib "C41W32.DLL" Alias "_C41_717SubFrmWordConfigEx@16" (ByVal configval As Int32, ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SubFrmWordRd Lib "C41W32.DLL" Alias "_C41_717SubFrmWordRd@16" (ByVal subframe As Int32, ByVal wordnum As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SyncTest Lib "C41W32.DLL" Alias "_C41_717SyncTest@8" (ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SyncWordDefault Lib "C41W32.DLL" Alias "_C41_717SyncWordDefault@8" (ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Function C41_717SyncWordSet Lib "C41W32.DLL" Alias "_C41_717SyncWordSet@24" (ByVal sync1 As Int32, ByVal sync2 As Int32, ByVal sync3 As Int32, ByVal sync4 As Int32, ByVal channum As Int32, ByVal handleval As Int32) As Int32
    Public Declare Sub C41_Ch717Disable Lib "C41W32.DLL" Alias "_C41_Ch717Disable@4" (ByVal handleval As Int32)
    Public Declare Sub C41_Ch717Enable Lib "C41W32.DLL" Alias "_C41_Ch717Enable@4" (ByVal handleval As Int32)
    Public Declare Function C41_AcgaRd Lib "C41W32.DLL" Alias "_C41_AcgaRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_AcgaWr Lib "C41W32.DLL" Alias "_C41_AcgaWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_AsciiToMant Lib "C41W32.DLL" Alias "_C41_AsciiToMant@12" (ByRef str As String, ByRef mant As Int32, ByRef exp As Int32) As Int32
    Public Declare Function C41_CardClose Lib "C41W32.DLL" Alias "_C41_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_CardInit Lib "C41W32.DLL" Alias "_C41_CardInit@0" ()
    Public Declare Function C41_CardOpen Lib "C41W32.DLL" Alias "_C41_CardOpen@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Function C41_CardOpenEx Lib "C41W32.DLL" Alias "_C41_CardOpenEx@16" (ByRef cardname As String, ByVal rcvcount As Int32, ByVal xmtcount As Int32, ByVal cardnum As Int32) As UInt32
    Public Declare Function C41_CardOpenExx Lib "C41W32.DLL" Alias "_C41_CardOpenExx@24" (ByRef cardname As String, ByVal rcvcount As Int32, ByVal xmtcount As Int32, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function C41_ChPauseCheck Lib "C41W32.DLL" Alias "_C41_ChPauseCheck@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ChStart Lib "C41W32.DLL" Alias "_C41_ChStart@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ChStop Lib "C41W32.DLL" Alias "_C41_ChStop@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_CommCall Lib "C41W32.DLL" Alias "_C41_CommCall@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_CommCheck Lib "C41W32.DLL" Alias "_C41_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CommDisable Lib "C41W32.DLL" Alias "_C41_CommDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CommEnable Lib "C41W32.DLL" Alias "_C41_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CommRd Lib "C41W32.DLL" Alias "_C41_CommRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_CommRun Lib "C41W32.DLL" Alias "_C41_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_CommStrRd Lib "C41W32.DLL" Alias "_C41_CommStrRd@16" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_CommStrWr Lib "C41W32.DLL" Alias "_C41_CommStrWr@16" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_CommTxen Lib "C41W32.DLL" Alias "_C41_CommTxen@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_CommWr Lib "C41W32.DLL" Alias "_C41_CommWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_ConvFromArinc Lib "C41W32.DLL" Alias "_C41_ConvFromArinc@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Function C41_ConvToArinc Lib "C41W32.DLL" Alias "_C41_ConvToArinc@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Function C41_CycleAdvance Lib "C41W32.DLL" Alias "_C41_CycleAdvance@0" () As UInt32
    Public Declare Function C41_CycleBuild Lib "C41W32.DLL" Alias "_C41_CycleBuild@24" (ByVal basevalmsgnum As Int32, ByVal nummsgs As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CycleBuildEx Lib "C41W32.DLL" Alias "_C41_CycleBuildEx@36" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal speed As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CycleBuildSt Lib "C41W32.DLL" Alias "_C41_CycleBuildSt@24" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CycleCalc Lib "C41W32.DLL" Alias "_C41_CycleCalc@0" () As UInt32
    Public Declare Function C41_CycleCheck Lib "C41W32.DLL" Alias "_C41_CycleCheck@8" (ByRef minperiod As Int32, ByRef maxperiod As Int32) As Int32
    Public Declare Sub C41_CycleCheckEnd Lib "C41W32.DLL" Alias "_C41_CycleCheckEnd@0" ()
    Public Declare Sub C41_CycleCheckMiddle Lib "C41W32.DLL" Alias "_C41_CycleCheckMiddle@16" (ByVal msgnum As Int32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
    Public Declare Sub C41_CycleCheckReal Lib "C41W32.DLL" Alias "_C41_CycleCheckReal@16" (ByVal msgnum As Int32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
    Public Declare Sub C41_CycleCheckStart Lib "C41W32.DLL" Alias "_C41_CycleCheckStart@0" ()
    Public Declare Function C41_CycleConflicts Lib "C41W32.DLL" Alias "_C41_CycleConflicts@0" () As UInt32
    Public Declare Function C41_CycleDivide Lib "C41W32.DLL" Alias "_C41_CycleDivide@0" () As Int32
    Public Declare Function C41_CycleFix Lib "C41W32.DLL" Alias "_C41_CycleFix@0" () As UInt32
    Public Declare Sub C41_CycleFixEnd Lib "C41W32.DLL" Alias "_C41_CycleFixEnd@0" ()
    Public Declare Sub C41_CycleFixMiddle Lib "C41W32.DLL" Alias "_C41_CycleFixMiddle@4" (ByVal conflicts As UInt32)
    Public Declare Sub C41_CycleFixStart Lib "C41W32.DLL" Alias "_C41_CycleFixStart@0" ()
    Public Declare Sub C41_CycleHook Lib "C41W32.DLL" Alias "_C41_CycleHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
    Public Declare Function C41_CycleInsert Lib "C41W32.DLL" Alias "_C41_CycleInsert@24" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As Int32, ByVal gapval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CycleInsertEnd Lib "C41W32.DLL" Alias "_C41_CycleInsertEnd@12" (ByVal eventvals As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_CycleInsertStart Lib "C41W32.DLL" Alias "_C41_CycleInsertStart@12" (ByVal eventvals As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_CycleLayout Lib "C41W32.DLL" Alias "_C41_CycleLayout@0" ()
    Public Declare Function C41_CycleMaxval Lib "C41W32.DLL" Alias "_C41_CycleMaxval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function C41_CycleMinval Lib "C41W32.DLL" Alias "_C41_CycleMinval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function C41_CycleParse Lib "C41W32.DLL" Alias "_C41_CycleParse@12" (ByVal basevalmsgnum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_CyclePrint Lib "C41W32.DLL" Alias "" (ByVal ParamArray list() As String)
    Public Declare Function C41_CycleReset Lib "C41W32.DLL" Alias "_C41_CycleReset@0" () As Int32
    Public Declare Function C41_CycleRotate Lib "C41W32.DLL" Alias "_C41_CycleRotate@0" () As UInt32
    Public Declare Function C41_CycleShift Lib "C41W32.DLL" Alias "_C41_CycleShift@8" (ByVal msgnum As Int32, ByVal value As Int32) As Int32
    Public Declare Function C41_CycleSlide Lib "C41W32.DLL" Alias "_C41_CycleSlide@0" () As Int32
    Public Declare Sub C41_CycleSlideEnd Lib "C41W32.DLL" Alias "_C41_CycleSlideEnd@0" ()
    Public Declare Sub C41_CycleSlideMiddle Lib "C41W32.DLL" Alias "_C41_CycleSlideMiddle@12" (ByVal index As UInt32, ByVal count As UInt32, ByVal conflicts As UInt32)
    Public Declare Sub C41_CycleSlideStart Lib "C41W32.DLL" Alias "_C41_CycleSlideStart@4" (ByVal factor As UInt32)
    Public Declare Sub C41_CycleSort Lib "C41W32.DLL" Alias "_C41_CycleSort@0" ()
    Public Declare Function C41_CycleToBit Lib "C41W32.DLL" Alias "_C41_CycleToBit@4" (ByVal value As UInt32) As UInt32
    Public Declare Function C41_CycleToMsec Lib "C41W32.DLL" Alias "_C41_CycleToMsec@4" (ByVal value As UInt32) As UInt32
    Public Declare Sub C41_CycleUnsort Lib "C41W32.DLL" Alias "_C41_CycleUnsort@0" ()
    Public Declare Function C41_CycleWalk Lib "C41W32.DLL" Alias "_C41_CycleWalk@0" () As UInt32
